--- a/sass/components/_project.scss
+++ b/sass/components/_project.scss
@@ -27,6 +27,7 @@
   .image {
     width: 80%;
     object-fit: contain;
+    cursor: pointer;
 
     @include respond(phone) {
       width: 100%;
